--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
 <body>
     <!-- header start -->
     <header>
+        <div class="navbar">
+            <div class="logo">
+                <img src="./images/icons/logo.png" alt="">
+                <h1 class="logo-text">Idea</h1>
+            </div>
+            <div class="navigation">
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Works</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="profile">
+                <img src="./images/icons/profile.png" alt="">
+            </div>
 
+        </div>
     </header>
     <!-- header end -->
     <main>
